# b4m_turtlebot3

./: Vagrantfile  b4m_bridge.md  b4m_bridge_lookup_table.txt  b4m_launch.sh  b4m_learnings_voice.md  b4m_readme.md  b4m_stop.sh  b4m_testing.md  b4m_webots_config.json  stop_turtlebot3_webots.sh
b4m_reference/: world_with_colored_cubes.wbt
src/b4m_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/b4m_bridge/b4m_bridge/: b4m_bridge_lookup_table.txt  b4m_bridge_node.py  speech_to_text_node.py
src/b4m_bridge/launch/: b4m_bridge.launch.py  b4m_webots_launch.py  turtlebot3_webots_nav.launch.py
src/b4m_bridge/worlds/: b4m_world.wbt
src/b4m_camera/: CMakeLists.txt  package.xml
src/b4m_camera/launch/: b4m_camera.launch.py
src/b4m_camera/src/: b4m_camera_node.cpp
src/b4m_camera/urdf/: b4m_camera.urdf
src/b4m_voice/: package.xml  setup.py
src/b4m_voice/b4m_voice/: voice_control.py
src/b4m_voice/launch/: b4m_voice.launch.py  b4m_voice_test.launch.py
src/b4m_voice/scripts/: voice_control
src/b4m_voice/test/: b4m_voice_test.py
